# simple-safe-write

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
simple_safe_write/: __init__.py  core.py
tests/: test_simple_safe_write.py
